2006-01-05  Josh Stone  <joshua.i.stone@intel.com>

	PR 2056
	* translate.cxx (var::~var, var::hist, var::buckets): make these
	methods virtual, so we can use polymorphism.
	(mapvar::hist, mapvar::buckets):  Override the corresponding var
	methods to handle pmaps correctly.
	(c_unparser::visit_arrayindex, c_unparser::visit_print_format): Make
	use of the new polymorphic behavior of var & mapvar when dealing with
	histogram data.
	* testsuite/buildok/pmap_foreach.stp: Add tests to check histogram
	accesses with for/foreach.

2006-01-04  Frank Ch. Eigler  <fche@elastic.org>

	PR 2057.
	* translate.cxx (c_unparser_assignment::visit_arrayindex): Don't take
	write lock around pmap accumulation.

2006-01-04  Will Cohen  <wcohen@redhat.com>

	* testsuite/buildok/printf.stp: Improve test coverage.
	
2006-01-03  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (emit_deregistration): Fix bad thinko on loop nesting.

2006-01-03  Frank Ch. Eigler  <fche@redhat.com>

	PR 1144, 1379
	* tapsets.cxx (emit_probe_prologue, _epilogue): New routines.
	Call from existing derived_probe spots.  Implement soft errors in
	epilogue code.  Implement reentrancy detection in prologue code.
	(dwarf_derived_probe::emit_deregistration): Add kprobes layer
	"nmissed" to skipped_count.
	* translate.cxx (varlock): Use nsleep(TRYLOCKDELAY) in lock
	contention loop.
	(emit_module_exit): Report number of soft errors and skipped probes.
	(emit_function, _probe): Add __restrict__ marker to context pointer.
	(translate_pass): Define new MAXTRYLOCK, TRYLOCKDELAY, MAXERRORS,
	MAXSKIPPED parameters.
	* tapset/logging.stp (error): Don't stp_error, just set context state.
	* stap.1.in, stapfuncs.5.in: Document soft errors.
	* elaborate.h: Corresponding changes.

2005-12-23  Kevin Stafford  <krstaffo@us.ibm.com>

	* tapset/2.6.9-20.ELsmp/syscalls.stp: added kernel
	version tapset
	* tapset/2.6.9-20.ELsmp/i686/syscalls.stp: added kernel
	version arch specific tapset