@@ -1,3 +1,10 @@
+2006-01-06  Will Cohen  <wcohen@redhat.com>
+
+	* Makefile.am (gcov,lcov): Don't remove .gcno .gcda files.
+	* Makefile.am (gcov): Fix to report data when tests fail.
+	* Makefile.am (lcov): New rule to generate html coverage data.
+	* Makefile.in: Regenerated.
+
 2006-01-05  Josh Stone  <joshua.i.stone@intel.com>
 
 	PR 2056
